# ditto

./: .dockerignore  .editorconfig  .flake8  .gitignore  .stickler.yml  Dockerfile  Makefile  README.md  README.rst  build.sh  clone.py  disable-rate-limit.patch  ditto.py  docker-compose.yml  netlify.toml  package.json  pulldata  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
api/v2/: index.json
api/v2/ability/: index.json  limit=0.json  limit=251.json  limit=50.json
api/v2/berry/: index.json  limit=0.json  limit=50.json  limit=64.json
api/v2/berry-firmness/: limit=0.json  limit=5.json
api/v2/berry-flavor/: index.json  limit=0.json
api/v2/characteristic/: index.json  limit=0.json  limit=50.json
api/v2/contest-effect/: index.json  limit=0.json  limit=33.json
api/v2/contest-type/: limit=0.json  limit=5.json
api/v2/egg-group/: index.json  limit=0.json
api/v2/encounter-condition/: index.json  limit=0.json
api/v2/encounter-condition-value/: index.json  limit=0.json
api/v2/encounter-method/: limit=0.json  limit=17.json
api/v2/evolution-chain/: index.json  limit=0.json  limit=365.json  limit=50.json
api/v2/evolution-trigger/: limit=0.json  limit=4.json
api/v2/gender/: limit=0.json  limit=3.json
api/v2/generation/: index.json  limit=0.json
api/v2/growth-rate/: index.json  limit=0.json
api/v2/item/: index.json  limit=0.json  limit=50.json  limit=746.json
api/v2/item-attribute/: limit=0.json  limit=50.json
api/v2/item-category/: index.json  limit=0.json  limit=50.json
api/v2/item-fling-effect/: limit=0.json  limit=7.json
api/v2/item-pocket/: index.json  limit=0.json
api/v2/language/: limit=0.json  limit=11.json
api/v2/location/: index.json  limit=0.json  limit=50.json  limit=678.json
api/v2/location-area/: index.json  limit=0.json  limit=50.json  limit=716.json
api/v2/machine/: index.json  limit=0.json  limit=1228.json  limit=50.json
api/v2/move-ailment/: limit=0.json  limit=50.json
api/v2/move-battle-style/: limit=0.json  limit=50.json
api/v2/move-category/: index.json  limit=0.json
ditto/: __init__.py  analyze.py  app.py  clone.py  main.py  serve.py
functions/: ability.js  resource-list.js
pokeapi_ditto/: analyze.py  clone.py  common.py  main.py  serve.py
pokeapi_ditto/commands/: analyze.py  clone.py  models.py  serve.py  transform.py
scripts/: ditto
src/: clone_data.py  clonedata.py  serve_data.py
updater/: Dockerfile  README.md  cmd.bash  update.bash
(+8145 files in other folders)
