[tool.poetry]
name = "pokeapi-ditto"
version = "1.0.0"
description = "Ditto is a command line tool for performing meta operations over PokéAPI data."
license = "Apache-2.0"
authors = ["Sargun Vohra <sargun.vohra@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/PokeAPI/ditto"
repository = "https://github.com/PokeAPI/ditto.git"
documentation = "https://github.com/PokeAPI/ditto"
keywords = ["pokeapi", "ditto", "pokemon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]

[tool.poetry.scripts]
ditto = "pokeapi_ditto.main:main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.19"
genson = "^1.0"
tqdm = "^4.26"
odictliteral = "^1.0"
yarl = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.5"
black = "^18.3-alpha.0"
isort = "^4.3"

[tool.black]
line-length = 88
py36 = true

[tool.isort]
skip = [".venv", "venv", ".git", "__pycache__", "dist", "data"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
